ob/kustomize/overlay/7.3.0/defaults/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ig
spec:
  template:
    spec:
      containers:
      - name: ig
