ob/kustomize/overlay/7.3.0/defaults/ingress.yaml
# Ingress for routes requiring MTLS with Open Banking Directory issued certs
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtls
spec:
  rules:
    - host: $(MTLS_FQDN)
      http:
        paths:
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /rs/
            pathType: Prefix
---
# Ingress for access to routes protected with TLS by a ForgeRock cert
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgerock
spec:
  rules:
    - host: $(FQDN)
      http:
        paths:
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /rcs/ui/
            pathType: Prefix
